// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createBEMBlock extends getChildContext() with the block value from props 1`] = `
Object {
  "bar": "baz",
  "block": "context-block",
}
`;

exports[`createBEMBlock provides BEM block name via context 1`] = `
Object {
  "block": "context-block",
}
`;
